--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
  Name    : Jenish Rajnikant Patel
  ID      : 131733206
  Email   : jrpatel47@myseneca.ca
- Section : NCC -->
+ Section : NCC 
+ App link:- https://web222-final-app.vercel.app/
+-->
 
 <!DOCTYPE html>
 <html lang="en">
