--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <title>Jenish Patel | All about me</title>
 
-    <meta name="description" content="WEB222 Assignment 5" />
+    <meta name="description" content="Personal Website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet'>
