--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
  <!--
- App link:- https://web222-final-app.vercel.app/
+ App link:- https://personal-website-kappa-nine.vercel.app/
 -->
 
 <!DOCTYPE html>
